# verovio-reference-book

./: .gitignore  CNAME  Gemfile  README.md  _config.yml  advanced-topics.html  building-from-sources.html  citation.bib  contributing.html  index.html  index.md  installing-or-building-from-sources.html  interactive-notation.html  introduction.html  pages.json  search.html  search.md  toolkit-reference.html  web-based-notation.html
_book/: 01-introduction.md  02-web-based-notation.md  03-interactive-notation.md  04-advanced-topics.md  05-toolkit-reference.md  06-building-from-sources.md  06-installing-or-building-from-sources.md  07-contributing.md
_data/: methods-exclude.yml
_includes/: mei  method-doc  music-notation  music-notation-only  sidebar-chapters.html  sidebar-search.html  sidebar-sections.html  sidebar-subsections.html  title-page.md
_layouts/: book.html  redirect.html
_plugins/: book-navigation.rb  copy_tutorials.rb  custom-tags.rb  indexer.rb  mei-examples.rb  music-notation-examples.rb  pdf.rb
advanced-topics/: controlling-the-svg-output.html  expansions.html  index.html  internal-structure.html  layout-options.html  mensural-notation.html  smufl.html  transposition.html
building-from-sources/: command-line.html  generate-code-with-libmei.html  java.html  javascript-and-webassembly.html  python.html
contributing/: adding-smufl-glyphs.html  generate-code-with-libmei.html  guidelines.html  index.html  workflow.html
css/: verovio-site.css  verovio-site.scss
first-steps/: basic-rendering.html  getting-started.html  index.html  layout-options.html  npm-usage.html  score-navigation.html
scripts/: README.md  examples.yaml  generate-all.sh  generate-examples.py  generate-mei-support.py  generate-methods.py  generate-options.py  generate-pdf.sh  pyproject.toml  toc.xsl  toc.yaml
(+183 files in other folders)
