[tool.poetry]
name = "verovio-reference-book"
version = "0.1.0"
description = ""
authors = ["Andrew Hankinson <andrew.hankinson@rism.digital>"]

[tool.poetry.dependencies]
python = "^3.9"
verovio = "^3.3.0"
PyYAML = "^5.4.1"
lxml = "^4.6.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
